--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     </head>
     <body>
         <!-- First container for header, main title, subtext, placeholder-->
-            <div class="logo">Header Logo</div>
-            <ul>
-                <li><a href="https://www.google.com">header link one</a> </li>
-                <li><a href="https://www.reddit.com">header link two</a> </li>
-                <li><a href="https://www.twitter.com">header link three</a> </li>
-            </ul>
+        <div class="top-container">
+                <div class="logo">Header Logo</div>
+                <ul>
+                    <li><a href="https://www.google.com">header link one</a> </li>
+                    <li><a href="https://www.reddit.com">header link two</a> </li>
+                    <li><a href="https://www.twitter.com">header link three</a> </li>
+                </ul>
 
-            <div class="main-title">This website is awesome</div>
-            <p class="top-subtext">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
-            <button class="sign-up">Sign up</button>
-            <div class="placeholderimage"><img src="./img/Placeholderimage1.png" alt="A placeholder image"></div>
+                <div class="main-title">This website is awesome</div>
+                <p class="top-subtext">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
+                <button class="sign-up">Sign up</button>
+                <div class="placeholderimage"><img src="./img/Placeholderimage1.png" alt="A placeholder image"></div>
+        </div>
 
         <!-- Second container for random info, 4 pics and subtext under them-->
             <div class="second-header">Some random information</div>
@@ -35,14 +37,19 @@
             <div class="imagedesc">this is some subtext under and illustration or image</div>
 
         <!-- Third container for Thor's quote-->
-        
+        <div class="quote-container">
             <div class="quote-text">"This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice."</div>
             <div class="quote-author">Thor, God of Thunder</div>
+        </div>
+
+        <div class="action-container">
         <!-- Fourth container for Call to action-->
             <div class="action-title">Call to action! It's time!</div>
             <div class="action-text">Sign up for our product by clicking that button right there!</div>
-            <button class="sing-up">Sing up</button>
+            <button class="sing-up">Sign up</button>
+        </div>
+
         <!-- Fifth container for footer-->    
             <div class="footer">Copyright © The Odin Project 2021</div>
     </body>
-</html>
+</html> 
