Add spacing to header and main section
Set the flexbox container with proper spacing for the header and top
body elements. As of now, no flexbox on the column direction has been
added to <body> and it seems like it won't need it.

Spacing between edge and header elements set as 20px for top, and 300px
for the sides. The sides spacing should be followed for the rest of the
sections as to keep an uniform look.

--- a/index.html
+++ b/index.html
@@ -8,17 +8,26 @@
     <body>
         <!-- First container for header, main title, subtext, placeholder-->
         <div class="top-container">
+            <div class="header">
                 <div class="logo">Header Logo</div>
-                <ul>
+
+                <ul class="right-links">
                     <li><a href="https://www.google.com">header link one</a> </li>
                     <li><a href="https://www.reddit.com">header link two</a> </li>
                     <li><a href="https://www.twitter.com">header link three</a> </li>
                 </ul>
-
+                
+            </div>
+            <div class="top-body-container">
+            <div class="left-body">
                 <div class="main-title">This website is awesome</div>
                 <p class="top-subtext">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
                 <button class="sign-up">Sign up</button>
+            </div>
+            <div class="right-body">
                 <div class="placeholderimage"><img src="./img/Placeholderimage1.png" alt="A placeholder image"></div>
+            </div>
+            </div>
         </div>
 
         <!-- Second container for random info, 4 pics and subtext under them-->
