Add spacing to quote and call to action sections
Set spacings and alignments for the quote and call to action sections.
Second section has been left for last since modifying it has shown
unexpected results. Should be done by next commit.

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
         </div>
 
         <!-- Second container for random info, 4 pics and subtext under them-->
-            <div class="second-header">Some random information</div>
-            <!-- blank divs to draw some rectangles as placeholders with <em>rounded</em> corners -->
-            <div class="placeholdersquare"></div> 
-            <div class="imagedesc">this is some subtext under and illustration or image</div>
+        <div class="second-header">Some random information</div>
+        <!-- blank divs to draw some rectangles as placeholders with <em>rounded</em> corners -->
+        <div class="placeholdersquare"></div> 
+        <div class="imagedesc">this is some subtext under and illustration or image</div>
 
-            <div class="placeholdersquare"></div> 
-            <div class="imagedesc">this is some subtext under and illustration or image</div>
+        <div class="placeholdersquare"></div> 
+        <div class="imagedesc">this is some subtext under and illustration or image</div>
 
-            <div class="placeholdersquare"></div> 
-            <div class="imagedesc">this is some subtext under and illustration or image</div>
+        <div class="placeholdersquare"></div> 
+        <div class="imagedesc">this is some subtext under and illustration or image</div>
 
-            <div class="placeholdersquare"></div> 
-            <div class="imagedesc">this is some subtext under and illustration or image</div>
+        <div class="placeholdersquare"></div> 
+        <div class="imagedesc">this is some subtext under and illustration or image</div>
 
         <!-- Third container for Thor's quote-->
         <div class="quote-container">
@@ -53,8 +53,10 @@
 
         <div class="action-container">
         <!-- Fourth container for Call to action-->
+        <div class="action-body">
             <div class="action-title">Call to action! It's time!</div>
             <div class="action-text">Sign up for our product by clicking that button right there!</div>
+        </div>
             <button class="sing-up">Sign up</button>
         </div>
 
