Add proper placements for "random info" section
Second section has now a centered title text, and all 4 placeholder
rectangles with a bottom text for a description.
Corrected quote author alignment from last commit, will now properly
show aligned to the right.

--- a/index.html
+++ b/index.html
@@ -31,24 +31,32 @@
         </div>
 
         <!-- Second container for random info, 4 pics and subtext under them-->
+    <div class="second-container">    
         <div class="second-header">Some random information</div>
         <!-- blank divs to draw some rectangles as placeholders with <em>rounded</em> corners -->
+    <div class="squares-container">
+    <div class="square">
         <div class="placeholdersquare"></div> 
         <div class="imagedesc">this is some subtext under and illustration or image</div>
-
+    </div>
+    <div class="square">
         <div class="placeholdersquare"></div> 
         <div class="imagedesc">this is some subtext under and illustration or image</div>
-
+    </div>
+    <div class="square">
         <div class="placeholdersquare"></div> 
         <div class="imagedesc">this is some subtext under and illustration or image</div>
-
+    </div>
+    <div class="square">
         <div class="placeholdersquare"></div> 
         <div class="imagedesc">this is some subtext under and illustration or image</div>
-
+    </div>
+    </div>
+    </div>
         <!-- Third container for Thor's quote-->
         <div class="quote-container">
             <div class="quote-text">"This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice."</div>
-            <div class="quote-author">Thor, God of Thunder</div>
+            <div class="quote-author">-Thor, God of Thunder</div>
         </div>
 
         <div class="action-container">
@@ -61,6 +69,8 @@
         </div>
 
         <!-- Fifth container for footer-->    
+        <div class="footer-container">
             <div class="footer">Copyright © The Odin Project 2021</div>
+        </div>
     </body>
 </html> 
